syntax = "proto3";

import "Common.proto";
option csharp_namespace = "Service.Shared";

service Order{
    rpc GetOrder(OrderRequest) returns (OrderResponse);
    rpc GetAllOrders(EmptyRequest) returns (OrderListResponse);
}

message OrderRequest{
    string OrderId = 1;
}

message OrderResponse{
    Payment PaymentDetails = 1;
    string OrderId = 2;
    int32 OrderAmount = 3;
    string OrderStatus = 4;
}

message Payment{
    string PaymentId = 1;
    string PaymentStatus = 2;
}

message OrderListResponse{
    repeated OrderResponse orders = 1;
}